<resources>
    <string name="app_name">MapsExample</string>
    <string name="action_settings">Settings</string>
    <string name="action_maps">Map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_new_route">NewRouteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MAPS EXAMPLE</string>
    <string name="nav_header_subtitle">The app to display your routes.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- Drawer Labels -->
    <string name="drawer_action_routes">Routes</string>
    <string name="drawer_action_new_route">New Route</string>
    <string name="drawer_action_settings">Settings</string>
    <string name="drawer_action_about">About</string>
    <string name="drawer_action_share">Share with others</string>
    <string name="drawer_title_others">More Options</string>

    <!-- New Route -->
    <string name="newroute_intro_text">The following URL will be used to download the points in xml format.</string>
    <string name="newroute_url">https://github.com/pperotti/android-projects/raw/master/MapsExample/gpxtraces/2764198.gpx</string>
    <string name="newroute_url_hint">http://your_gpx_file_url</string>
    <string name="newroute_download">Download</string>

    <!-- Notifications -->
    <string name="notification_download_channel_name">Maps App Channel</string>
    <string name="notification_download_channel_description">Maps Description</string>
    <string name="notification_download_enqueued_title">Downloading %s</string>
    <string name="notification_download_enqueued_text">Step 1/3</string>
    <string name="notification_download_failed_title">Downloading %s</string>
    <string name="notification_download_failed_text">Download Failed</string>
    <string name="notification_parsing_title">Parsing %s</string>
    <string name="notification_parsing_text">Step 2/3</string>
    <string name="notification_parsed_title">Parsing %s</string>
    <string name="notification_parsed_text">Step 2/3</string>
    <string name="notification_parsing_failed_title">Parsing %s</string>
    <string name="notification_parsing_failed_text">Step 2/3</string>
    <string name="notification_processing_title">Processing %s</string>
    <string name="notification_processing_text">Step 3/3</string>
    <string name="notification_processing_failed_title">Processing %s</string>
    <string name="notification_processing_failed_text">Step 3/3</string>
    <string name="notification_processed_title">Steps Completed!</string>
    <string name="notification_processed_text">All steps are now completed!</string>

    <!-- Errors -->
    <string name="error_download_in_progress">There is already a download in progress.</string>
    <string name="error_permission_write_external_storage_required">You MUST authorize the app to use the external storage so the app works properly.</string>
</resources>
