<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".newroute.NewRouteActivityFragment"
    tools:showIn="@layout/activity_new_route">

    <TextView
        android:id="@+id/newroute_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/newroute_intro_text"/>

    <EditText
        android:id="@+id/newroute_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newroute_url_hint"
        android:text="@string/newroute_url"
        app:layout_constraintTop_toBottomOf="@id/newroute_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/newroute_download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newroute_download"
        app:layout_constraintTop_toBottomOf="@id/newroute_url"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>